--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ strong{
     padding: 1rem;
     margin: 0;
     max-width: 95vw;
-    height: calc(100vh - 100px);
+    height: 100%;
   }
 
   .Container-App{
