--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -31,7 +31,7 @@
 }
 
 .navbar-menu {
-  height: calc(100% - 50px);
+  height: 100%;
   list-style: none;
   padding: 0;
   margin-top: 1rem;
@@ -73,7 +73,7 @@
   .navbar {
       position: fixed;
       width: 60px; 
-      height: 100vh;
+      height: 100%;
       transform: translateX(-15%); 
       color: var(--white);
   }
